--- a/metadata.yaml
+++ b/metadata.yaml
@@ -25,6 +25,7 @@ subjects:
 - !lcsh 'Science -- Periodicals'
 - !lcc 'AP'
 - !lcsh 'Literature, Modern -- 19th century -- Periodicals'
+- GITenberg
 title: Lippincott's Magazine of Popular Literature and Science, Volume 26, September,
   1880
 url: http://www.gutenberg.org/ebooks/14842
